# OOP-LR_3

./: README.md
LR_3/: CMakeLists.txt  main.cpp
LR_3/include/: Figure.h  FigureArray.h  Hexagon.h  Pentagon.h  Rhombus.h
LR_3/src/: Figure.cpp  FigureArray.cpp  Hexagon.cpp  Pentagon.cpp  Rhombus.cpp
LR_3/test/: tests.cpp
